<resources>
    <string name="app_name">SmartHome</string>
    <string name="app_language">Tiếng Việt</string>
    <string name="all_msg_warning_network">Không có kết nối mạng</string>
    <string name="all_msg_error">Đã xảy ra lỗi.</string>
    <string name="all_txt_cancel">Huỷ</string>
    <string name="all_txt_on">Bật</string>
    <string name="all_txt_off">Tắt</string>
    <string name="all_txt_error">NC</string>
    <string name="all_txt_no_connect">Chưa kết nối</string>
    <string name="all_txt_speed">Tốc độ</string>

    <string name="main_txt_floor_1">Tầng 1</string>
    <string name="main_txt_floor_2">Tầng 2</string>
    <string name="main_txt_floor_3">Tầng 3</string>
    <string name="main_msg_connect_server_warning">Không có kết nối với máy chủ</string>

    <string name="floor_1_lbl_living_room_light">Đèn phòng khách</string>
    <string name="floor_1_lbl_decorative_light">Đèn trang trí</string>
    <string name="floor_1_lbl_ceiling_fan">Quạt trần</string>
    <string name="floor_1_lbl_aptomat">Aptomat</string>
    <string name="floor_1_lbl_temp_humi">Nhiệt độ và Độ ẩm</string>
    <string name="floor_1_lbl_co2">CO2</string>

    <string name="login_edit_hint_email">Tài khoản</string>
    <string name="login_edit_hint_password">Mật khẩu</string>
    <string name="login_btn_login">Đăng nhập</string>
    <string name="login_msg_login_warning">Tên đăng nhập hoặc mật khẩu sai.</string>
    <string name="login_msg_email_warning">Tên tài khoản trống</string>
    <string name="login_msg_password_warning">Mật khẩu trống</string>

    <string name="settings_toolbar_title">Cài đặt</string>
    <string name="settings_lbl_gerenal">Cài đặt chung</string>
    <string name="settings_lbl_language">Ngôn ngữ</string>
    <string name="settings_lbl_logout">Đăng xuất</string>
    <string name="settings_msg_confirm_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="nav_header_title">Phạm Hùng</string>
    <string name="all_loading">Loading</string>
    <string name="settings_lbl_address_server">Server</string>

</resources>
